--- a/操作系统.md
+++ b/操作系统.md
@@ -144,15 +144,15 @@
 #### 多线程模型
 
 + 多对一：多个用户级线程对应一个内核级线程：
-  + ![image-20201025162157840](C:\Users\ly\Documents\typora\git\note\images\image-20201025162157840.png)
+  + ![image-20201025162157840](images.assets\image-20201025162157840.png)
   + 优点：用户级线程的切换不需要切换到核心态，线程管理开销小
   + 缺点：一个用户级线程被阻塞，整个进程被阻塞，并发度不高，而且多个线程无法在多个核上并行运行
 + 一对一：
-  + ![image-20201025163023773](C:\Users\ly\Documents\typora\git\note\images\image-20201025163023773.png)
+  + ![image-20201025163023773](images.assets\image-20201025163023773.png)
   + 优点：一个用户级线程被阻塞，其他线程还能继续执行，并发强，还可以运行在多个核上面
   + 缺点：一个用户进程占用多个内核级线程，用户级线程的切换需要由操作系统来完成，要切换到核心态，线程管理成本高、开销大
 + 多对多
-  + ![image-20201025163428707](C:\Users\ly\Documents\typora\git\note\images\image-20201025163428707.png)
+  + ![image-20201025163428707](images.assets\image-20201025163428707.png)
   + 集二者之长
 
 ### 处理机调度
@@ -181,7 +181,7 @@
 
 + **低级调度（进程调度）**：在就绪队列中选择一个为其分配CPU，频率会很高
 
-![image-20201025193754169](C:\Users\ly\Documents\typora\git\note\images\image-20201025193754169.png)
+![image-20201025193754169](images.assets\image-20201025193754169.png)
 
 #### 进程调度时机
 
@@ -346,20 +346,20 @@
 
 ##### 信号量实现
 
-+ ![image-20201028095711669](C:\Users\ly\Documents\typora\git\note\images\image-20201028095711669.png)
++ ![image-20201028095711669](images.assets\image-20201028095711669.png)
 + 实现互斥的P操作一定要在实现同步的P操作之后，否则可能会引起死锁
 
 #### 多生产者消费者问题
 
-![image-20201028100316904](C:\Users\ly\Documents\typora\git\note\images\image-20201028100316904.png)
+![image-20201028100316904](images.assets\image-20201028100316904.png)
 
-+ ![image-20201028100440130](C:\Users\ly\Documents\typora\git\note\images\image-20201028100440130.png)
++ ![image-20201028100440130](images.assets\image-20201028100440130.png)
 
 #### 吸烟者问题
 
 + 可以生产多个产品的单生产者
 
-+ ![image-20201028101534244](C:\Users\ly\Documents\typora\git\note\images\image-20201028101534244.png)
++ ![image-20201028101534244](images.assets\image-20201028101534244.png)
 
 #### 读者写者问题 
 
@@ -548,7 +548,7 @@
 + 快表
   + 又称联想寄存器（TLB），是一种访问速度比内存快很多的高速缓冲存储器，用来存放当前访问的若干页表项，以加速地址变换的过程（与此对应，内存中的表项被称为慢表）
   + 下次访问时先去快表中查询，如果没命中的话，就重新去内存中找，找到后将其存储到快表
-+ ![image-20201028213611417](C:\Users\ly\Documents\typora\git\note\images\image-20201028213611417.png)
++ ![image-20201028213611417](images.assets\image-20201028213611417.png)
 
 ##### 单级页表
 
@@ -589,10 +589,10 @@
 
 ##### 分段与分页对比
 
-+ ![image-20201029105029736](C:\Users\ly\Documents\typora\git\note\images\image-20201029105029736.png)
++ ![image-20201029105029736](images.assets\image-20201029105029736.png)
 + 分段比分页更容易实现信息的共享和保护，可以将一整个段作为信息共享
 + 分页和分段访问逻辑地址都需要两次访问内存，分段存储也可以引入快表机制
-+ ![image-20201029110028538](C:\Users\ly\Documents\typora\git\note\images\image-20201029110028538.png)
++ ![image-20201029110028538](images.assets\image-20201029110028538.png)
 
 ##### 段页式管理
 
@@ -845,7 +845,7 @@
   + 多层索引：是第一层索引块指向第而层的索引块（各层索引表的大小不能大于一个磁盘块），小数据也需要多级索引效率低
   + 混合索引：顶级索引表既包含直接地址，又包含一级索引块，对小文件来说磁盘读写次数少
 
-![image-20201030104348351](C:\Users\ly\Documents\typora\git\note\images\image-20201030104348351.png)
+![image-20201030104348351](images.assets\image-20201030104348351.png)
 
 ### 文件存储空间管理
 
@@ -921,8 +921,8 @@
 
 ### 文件系统层次结构
 
-+ ![image-20201030145016873](C:\Users\ly\Documents\typora\git\note\images\image-20201030145016873.png)
-+ ![image-20201030145156759](C:\Users\ly\Documents\typora\git\note\images\image-20201030145156759.png)
++ ![image-20201030145016873](images.assets\image-20201030145016873.png)
++ ![image-20201030145156759](images.assets\image-20201030145156759.png)
 
 ### 磁盘
 
@@ -1083,7 +1083,7 @@
 
 #### 总结
 
-![image-20201031125859199](C:\Users\ly\Documents\typora\git\note\images\image-20201031125859199.png)
+![image-20201031125859199](images.assets\image-20201031125859199.png)
 
 ### IO软件层次结构
 
@@ -1098,8 +1098,8 @@
   + 设备分配与回收
   + 数据缓冲区管理
   + 建立逻辑名到物理设备名的映射关系（逻辑设备表（LUT））
-  + ![image-20201031130528747](C:\Users\ly\Documents\typora\git\note\images\image-20201031130528747.png)
-+ ![image-20201031130845845](C:\Users\ly\Documents\typora\git\note\images\image-20201031130845845.png)
+  + ![image-20201031130528747](images.assets\image-20201031130528747.png)
++ ![image-20201031130845845](images.assets\image-20201031130845845.png)
 
 #### 核心子系统
 
@@ -1113,7 +1113,7 @@
 + 假脱机技术：利用软件模拟脱机技术
   + 借助输入进程将数据读到输入井，利用输出程序将数据从输出井输出（输入输出井位于磁盘）
   + 同时也会在内存中设置输入缓冲区和输出缓冲区，暂存输入设备输入的数据，和即将输出输出设备的数据
-  + ![image-20201031132346365](C:\Users\ly\Documents\typora\git\note\images\image-20201031132346365.png)
+  + ![image-20201031132346365](images.assets\image-20201031132346365.png)
   + 可以将独占设备变成共享设备
 
 ##### 设备分配与回收
@@ -1130,11 +1130,11 @@
 + 设备分配管理数据结构
   + 一个通道可以管理多个控制器、一个控制器可以管理多个设备
   + 设备控制表（DCT）：系统为每个设备分配，用于记录设备情况
-    + ![image-20201031140204594](C:\Users\ly\Documents\typora\git\note\images\image-20201031140204594.png)
+    + ![image-20201031140204594](images.assets\image-20201031140204594.png)
   + 控制器控制表（COCT），每个设备控制器，操作系统根据COCT的信息对控制器进行操作和管理
-    + ![image-20201031140350523](C:\Users\ly\Documents\typora\git\note\images\image-20201031140350523.png)
+    + ![image-20201031140350523](images.assets\image-20201031140350523.png)
   + 通道控制表（CHCT)，每个通道，操作系统根据CHCT的信息对通道进行操作和管理
-    + ![image-20201031140427014](C:\Users\ly\Documents\typora\git\note\images\image-20201031140427014.png)
+    + ![image-20201031140427014](images.assets\image-20201031140427014.png)
   + 系统设备表（SDT），记录系统中**全部设备**的情况，每个设备对应一个表目
     + 一条表目包含：设备类型（打印机），设备标识符（物理设备名）、DCT（设备控制表）、驱动程序入口
 + 设备分配的步骤
@@ -1175,7 +1175,7 @@
 
   + 缓冲池，很多个缓冲区组成，维护空缓冲队列、满输入队列、满输出队列
 
-    + ![image-20201031143302272](C:\Users\ly\Documents\typora\git\note\images\image-20201031143302272.png)
+    + ![image-20201031143302272](images.assets\image-20201031143302272.png)
 
       
 
