--- a/排序算法.md
+++ b/排序算法.md
@@ -1,6 +1,7 @@
 ### 排序算法
 
-+ #### 冒泡排序
+#### 冒泡排序
+
 > 双重循环，只要当前值比选定的值就交换
 > 第一重循环遍历数组（0到len-1），第二重循环将数组中每个元素都与第一重循环中的值相比，如小，则交换顺序，直到最后一个元素，然后进行下轮循环。
 >
@@ -21,7 +22,8 @@
 >
 > 
 
-+ #### 选择排序 
+#### 选择排序 
+
 > 双重循环，每次都找出一个最大或最小的数的下标，然后交换
 > 第一重循环遍历数组，第二重循环将选出数组中最小元素的下标，最后才交换。
 > ``` java  
@@ -41,7 +43,8 @@
   >  时间复杂度 O(n^2)，空间复杂度O(1)；
   >  **冒泡排序每次只要满足条件就交换，选择排序只是先找出最大或最小的元素的下标，最后才交换。所以冒泡排序最大可能交换次数为n^2，而选择排序交换的次数为n。**
 
-+ #### 插入排序 
+#### 插入排序 
+
 > 假设该数组已经有序，从当前需要排序的前一个元素开始一一比较，只要大于当前元素就后移，直到找到插入的位置。
 > 可以从数组中第二个元素开始插入，之后每次都假设数组有序。
 > ``` java
@@ -62,7 +65,8 @@
 >  ```
  >  时间复杂度 O(n^2)，空间复杂度O(1)
 
-+ #### 希尔排序
+#### 希尔排序
+
 > 本质是分组插入排序，通过设置增量来进行分组，然后对分组进行插入排序。先增量设置为len/2，len/4，直到增量为1。
 > 在实际代码中，可以不考虑分组情况，直接从gap到len进行处理，只是每次跳动gap。
 > 
@@ -81,7 +85,8 @@
        }
 >   ```
 
-+ #### 归并排序
+#### 归并排序
+
 > 先拆分再合并
 > 使用分而治之的思想，将数组分成两部分，直到一侧只有一个元素，此时该小数组必然有序，然后将两有序数组合并成一个大的有序数组，然后继续合并。
 > ``` java
@@ -133,7 +138,8 @@
 > ```
 > 采用二分的思想，时间复杂度O(nlogn)，空间复杂度O(n)，需要临时空间存放处理后的数据。
 
-+ #### 快速排序
+#### 快速排序
+
 > 采用分治的思想，通过选取一个基准，比基准大的都放到基准的右边，比基准小的放到左边，然后对左右两边分别进行选基，移动递归操作。这种做法需要额外的数组空间
 > 如果不能引入额外的空间，我们可以采用左右交替扫描的方法，先从后往前扫，直到找到第一个比基准小的值，移动到前面，然后从前往后扫描。
 > 法1：需要额外空间
